# everdrive-version-notifier

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check_files.yml
src/everdrive_version_notifier/: coordinator.py  latest_files.json  notifier.py  run_notifier.py  scraper.py  state.py  update_state.py
tests/: test_coordinator.py  test_notifier.py  test_run_notifier.py  test_scraper.py  test_state.py  test_update_state.py
